# ok-client

./: .coveragerc  .gitignore  .ok_storage.dir  .travis.yml  README.md  build.sh  ok  pyproject.toml  release.py  requirements.txt  scheme  setup.py  unittest.cfg
.github/workflows/: main.yml
client/: 61a_config.json  __init__.py  __main__.py  config.json  config.ok  config.py  exceptions.py
client/api/: assignment.py  notebook.py
client/cli/: lock.py  ok.py  publish.py  test.py
client/extensions/: __init__.py  notebook.py
client/models/: serialize.py
client/protocols/: analytics.py  autostyle.py  backup.py  collaborate.py  export.py  file_contents.py  followup.py  grading.py  guidance.py  help.py  hinting.py  lock.py  rate_limit.py  restore.py  scoring.py  testing.py  trace.py  unlock.py
client/serialize/: __init__.py
client/templates/: auth.html  partial.course.html  red.css
client/utils/: assess_id_util.py  auth.py  browser_probs.py  config.py  debug.py  encryption.py  format.py  fpp.py  fpp_probs.py  fpp_routes.py  fpp_utils.py  guidance.py  html.py  locking.py  network.py  output.py  printer.py  prompt.py  pytest.py  software_update.py  storage.py  timer.py
demo/doctest/: config.json  config.ok  hw1.py
demo/fpp_test/: .ok_storage.db  config.ok  hw1.py  mcq.py  static  templates  ucb.py
demo/guidance_test/: empty.py  test.ok
demo/ipython/: Submit to OK.ipynb  ipy.ok
demo/lark/: config.ok  hw1.lark
demo/ok_test/: .ok_history  .ok_messages  .ok_storage.db  config.ok  hw1.py  ok  (+3 more)
env/: pyvenv.cfg
scripts/: osx-install.sh  windows-install.sh
(+165 files in other folders)
